网络请求框架搭建

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,21 @@
     package="com.example.xgx">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".MemberManagementActivity" />
         <activity android:name=".StaffManagementActivity" />
         <activity android:name=".ProductListActivity" />
@@ -28,7 +30,7 @@
         <activity android:name=".TechnicianListActivity" />
         <activity android:name=".MakeOrderSuccessActivity" />
         <activity android:name=".OrderPayActivity" />
-        <activity android:name=".OrderDoneActivity"></activity>
+        <activity android:name=".OrderDoneActivity" />
     </application>
 
 </manifest>
