--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,17 @@ dependencies {
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 
     //注解
-    implementation 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
 
+    //Adapter封装
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+
+    //基于Retrofit和RxJava封装的链式网络库
+    implementation 'com.tamic.novate:novate:1.5.2.3'
+
+
 
 }
