完成我的余额，账单列表的接口；添加日期选择器。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".MakeOrderSuccessActivity" />
         <activity android:name=".OrderPayActivity" />
         <activity android:name=".OrderDoneActivity" />
+        <activity android:name=".MyBalanceActivity"></activity>
     </application>
 
 </manifest>
