--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,37 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.xgx">
 
+
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <!-- 4.2以上的手机需要的权限 -->
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+    <!-- 访问INTERNET的权限 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <!-- 手机信息 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- ************************************* -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 在SD卡中创建文件与删除文件权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!-- 传感器 -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <!-- 摄像头权限 -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="com.meilapp.meila.permission.MIPUSH_RECEIVE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!-- 开启闪光灯权限 -->
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+
+
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -10,28 +41,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".MemberManagementActivity" />
-        <activity android:name=".StaffManagementActivity" />
-        <activity android:name=".ProductListActivity" />
-        <activity android:name=".ActivityPackageListActivity" />
-        <activity android:name=".BillListActivity" />
-        <activity android:name=".MemberInfoInputActivity" />
-        <activity android:name=".CarInfoInputActivity" />
-        <activity android:name=".MakeOrderActivity" />
-        <activity android:name=".MealListActivity" />
-        <activity android:name=".TechnicianListActivity" />
-        <activity android:name=".MakeOrderSuccessActivity" />
-        <activity android:name=".OrderPayActivity" />
-        <activity android:name=".OrderDoneActivity" />
-        <activity android:name=".MyBalanceActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.MemberManagementActivity" />
+        <activity android:name=".activity.StaffManagementActivity" />
+        <activity android:name=".activity.ProductListActivity" />
+        <activity android:name=".activity.ActivityPackageListActivity" />
+        <activity android:name=".activity.BillListActivity" />
+        <activity android:name=".activity.MemberInfoInputActivity" />
+        <activity android:name=".activity.CarInfoInputActivity" />
+        <activity android:name=".activity.MakeOrderActivity" />
+        <activity android:name=".activity.MealListActivity" />
+        <activity android:name=".activity.TechnicianListActivity" />
+        <activity android:name=".activity.MakeOrderSuccessActivity" />
+        <activity android:name=".activity.OrderPayActivity" />
+        <activity android:name=".activity.OrderDoneActivity" />
+        <activity android:name=".activity.MyBalanceActivity" />
+        <activity android:name=".activity.BillListItemInfoActivity"></activity>
     </application>
 
 </manifest>
